--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,24 @@
     font-family: 'act_of_rejectionregular';
 }
 /* Menu */
+#menu {
+    background: url("../img/bg1.gif") center center no-repeat fixed;
+    background-size: cover;
+}
+
+.scores {
+    padding-top: 5%;
+    padding-left: 5%;
+}
+
+.victory, .defeat, .ratio{
+    text-align: left;
+    margin-bottom: 20px;
+    color: #fff;
+    font-size: 25px;
+    letter-spacing: 3px;
+}
+
 .menu {
     display: flex;
     flex-direction: column;
@@ -22,6 +40,8 @@
     background: url("../img/bg1.gif") center center no-repeat fixed;
     background-size: cover;
     height: 90vh;
+    padding-top: 5%;
+    height: 49vh;
 }
 
 /* Boutons */
@@ -88,6 +108,11 @@
 .popup .content {
     max-height: 30%;
     overflow: auto;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.save {
+    text-align: right;
 }
 @media only screen and (max-width: 600px) {
 
